--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@yudiel/react-qr-scanner": "^2.0.4",
     "qrcode.react": "^3.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1"
